FFMpeg: add a precheck condition in linux CUDA

CUDA backend requires libnvcuvid.so in libavcodec in Linux.
This might be a temporal patch but can avoid crash
in linux nvidia environments.

Pick-to: 6.7 6.6 6.5
Fixes: QTBUG-122199
Change-Id: I5f376be9db3ccea3405940d4f5ea5f77043a9131
Reviewed-by: Tim Blechmann <tim@klingt.org>
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>